--- a/index.html
+++ b/index.html
@@ -202,15 +202,73 @@
         <section class="questions"></section>
 
         <!-- contacts -->
-        <section class="contacts"></section>
+        <section class="contacts">
+            <div class="container">
+                <div class="contact_info">
+                    <div class="contact_top">
+                        <div class="section_title">Контактные данные</div>
+                        <div class="subtitle">
+                            Напишите нам или заполните форму обратной связи, <br>
+                            и мы свяжемся с вами в кратчайшие сроки.
+                        </div>
+                    </div>
+                    <div class="contact_links">
+                        <ul>
+                            <li><span>Телефон</span><a href="tel:+79551236829">+7(955)123-68-29</a></li>
+                            <li><span>Email адрес:</span><a href="tel:+79551236829">company@websharp.ru</a></li>
+                            <li><span>Telegram</span><a href="tel:+79551236829">@websharpru</a></li>
+                            <li><span>Whatsapp</span><a href="tel:+79551236829">+7(955)123-68-29</a></li>
+                            <li><span>Сообщество в VK</span><a href="tel:+79551236829">vk.com/websharpru</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="contact_form">
+                    <div class="contact_top">
+                        <div class="section_title">Форма обратной связи</div>
+                        <div class="subtitle">Мы всегда готовы ответить на ваши вопросы и помочь с выбором услуг
+                        </div>
+                    </div>
+                    <form class="contact_form_content">
+                        <div class="form_top">
+                            <label>
+                                <input type="text" name="firstname" placeholder="Ваше имя*">
+                                <div class="icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M20 21V19C20 17.9391 19.5786 16.9217 18.8284 16.1716C18.0783 15.4214 17.0609 15 16 15H8C6.93913 15 5.92172 15.4214 5.17157 16.1716C4.42143 16.9217 4 17.9391 4 19V21" stroke="#687796" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M12 11C14.2091 11 16 9.20914 16 7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7C8 9.20914 9.79086 11 12 11Z" stroke="#687796" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </div>
+                            </label>
+                            <label>
+                                <input type="text" name="firstname" placeholder="Ваш телефон*">
+                                <div class="icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M22.0004 16.92V19.92C22.0016 20.1985 21.9445 20.4741 21.8329 20.7293C21.7214 20.9845 21.5577 21.2136 21.3525 21.4018C21.1473 21.5901 20.905 21.7335 20.6412 21.8227C20.3773 21.9119 20.0978 21.945 19.8204 21.92C16.7433 21.5856 13.7874 20.5341 11.1904 18.85C8.77425 17.3146 6.72576 15.2661 5.19042 12.85C3.5004 10.2412 2.44866 7.27097 2.12042 4.17997C2.09543 3.90344 2.1283 3.62473 2.21692 3.3616C2.30555 3.09846 2.44799 2.85666 2.63519 2.6516C2.82238 2.44653 3.05023 2.28268 3.30421 2.1705C3.5582 2.05831 3.83276 2.00024 4.11042 1.99997H7.11042C7.59573 1.9952 8.06621 2.16705 8.43418 2.48351C8.80215 2.79996 9.0425 3.23942 9.11042 3.71997C9.23704 4.68004 9.47187 5.6227 9.81042 6.52997C9.94497 6.8879 9.97408 7.27689 9.89433 7.65085C9.81457 8.02482 9.62928 8.36809 9.36042 8.63997L8.09042 9.90997C9.51398 12.4135 11.5869 14.4864 14.0904 15.91L15.3604 14.64C15.6323 14.3711 15.9756 14.1858 16.3495 14.1061C16.7235 14.0263 17.1125 14.0554 17.4704 14.19C18.3777 14.5285 19.3204 14.7634 20.2804 14.89C20.7662 14.9585 21.2098 15.2032 21.527 15.5775C21.8441 15.9518 22.0126 16.4295 22.0004 16.92Z" stroke="#687796" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </div>
+                            </label>
+                        </div>
+                        <label>
+                            <textarea name="" id="" placeholder="Ваше сообщение*"></textarea>
+                            <div class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <path d="M21 11.5C21.0034 12.8199 20.6951 14.1219 20.1 15.3C19.3944 16.7118 18.3098 17.8992 16.9674 18.7293C15.6251 19.5594 14.0782 19.9994 12.5 20C11.1801 20.0035 9.87812 19.6951 8.7 19.1L3 21L4.9 15.3C4.30493 14.1219 3.99656 12.8199 4 11.5C4.00061 9.92179 4.44061 8.37488 5.27072 7.03258C6.10083 5.69028 7.28825 4.6056 8.7 3.90003C9.87812 3.30496 11.1801 2.99659 12.5 3.00003H13C15.0843 3.11502 17.053 3.99479 18.5291 5.47089C20.0052 6.94699 20.885 8.91568 21 11V11.5Z" stroke="#687796" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                        </label>
+                        <button>Отправить</button>
+                    </form>
+                </div>
+            </div>
+        </section>
 
         <!-- footer -->
-        <section class="footer">
-            <div class="container">
-                <div class="footer_left footer_top">
+        <footer class="footer">
+            <div class="container footer_top">
+                <div class="footer_left ">
                     <a href="" class="footer_logo"><img src="./assets/images/logo.png" alt=""></a>
                     <p class="footer_description">
-                        Молодая и амбициозная веб-студию, которая специализируется
+                        Молодая и амбициозная веб-студию, <br> которая специализируется <br>
                         на разработке продающих сайтов под ключ
                     </p>
                     <form class="footer_form">
@@ -220,21 +278,72 @@
                         <label>
                             <input type="email" placeholder="Ваш Email адрес">
                             <div class="icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                    <path d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z" stroke="#687796" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M22 6L12 13L2 6" stroke="#687796" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none">
+                                    <path
+                                        d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z"
+                                        stroke="#687796" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                    <path d="M22 6L12 13L2 6" stroke="#687796" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
                                 </svg>
                             </div>
                         </label>
                         <button>Отправить</button>
                     </form>
                 </div>
+                <div class="footer_link_items">
+                    <!-- item1 -->
+                    <div class="footer_link_item">
+                        <div class="footer_title">Карта сайта</div>
+                        <ul>
+                            <li><a href="">Главная</a></li>
+                            <li><a href="">О нас</a></li>
+                            <li><a href="">Тарифы и услуги</a></li>
+                            <li><a href="">Проекты</a></li>
+                            <li><a href="">Блог</a></li>
+                            <li><a href="">Контакты</a></li>
+                            <li><a href="">FAQ</a></li>
+                        </ul>
+                    </div>
+                    <!-- item2 -->
+                    <div class="footer_link_item">
+                        <div class="footer_title">Сайты под ключ</div>
+                        <ul>
+                            <li><a href="">Сайт-визитка <br> с индивидуальным <br> дизайном</a></li>
+                            <li><a href=""> Продающий Landing
+                                    <br> с уникальным дизайном </a></li>
+                            <li><a href="">Корпоративный сайт</a></li>
+
+                        </ul>
+                    </div>
+                    <!-- item3 -->
+                    <div class="footer_link_item">
+                        <div class="footer_title">Продвижение сайтов</div>
+                        <ul>
+                            <li><a href="">SEO продвижение </a></li>
+                            <li><a href="">Контекстная реклама</a></li>
+
+                        </ul>
+                    </div>
+                    <!-- item4 -->
+                    <div class="footer_link_item last_child">
+                        <div class="footer_title">Контактные данные</div>
+                        <ul>
+                            <li><span>Телефон</span><a href="tel:+79551236829">+7(955)123-68-29</a></li>
+                            <li><span>Email адрес:</span><a href="tel:+79551236829">company@websharp.ru</a></li>
+                            <li><span>Telegram</span><a href="tel:+79551236829">@websharpru</a></li>
+                            <li><span>Whatsapp</span><a href="tel:+79551236829">+7(955)123-68-29</a></li>
+                            <li><span>Сообщество в VK</span><a href="tel:+79551236829">vk.com/websharpru</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div class="container footer_bottom">
                 <div>©2024</div>
                 <a href="">Политика обработки персональных данных</a>
             </div>
-        </section>
+        </footer>
     </div>
 
 
